feat: Save note to Core Data from Add Note view controller

--- a/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
+++ b/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
@@ -916,7 +916,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ny3-yp-ebO" customClass="PrimaryButton" customModule="SmartKitty" customModuleProvider="target">
-                                <rect key="frame" x="20" y="782" width="374" height="60"/>
+                                <rect key="frame" x="20" y="752" width="374" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Y0Y-D6-w3e"/>
                                 </constraints>
@@ -940,7 +940,7 @@
                             <constraint firstItem="K93-bh-Lfm" firstAttribute="trailing" secondItem="frL-zb-Ozc" secondAttribute="trailing" constant="20" id="GWg-xj-DNj"/>
                             <constraint firstItem="frL-zb-Ozc" firstAttribute="leading" secondItem="K93-bh-Lfm" secondAttribute="leading" constant="20" id="Q9u-w5-LiW"/>
                             <constraint firstItem="Ny3-yp-ebO" firstAttribute="leading" secondItem="K93-bh-Lfm" secondAttribute="leading" constant="20" id="cDV-t5-ayw"/>
-                            <constraint firstItem="K93-bh-Lfm" firstAttribute="bottom" secondItem="Ny3-yp-ebO" secondAttribute="bottom" constant="20" id="hrm-35-wmt"/>
+                            <constraint firstItem="K93-bh-Lfm" firstAttribute="bottom" secondItem="Ny3-yp-ebO" secondAttribute="bottom" constant="50" id="hrm-35-wmt"/>
                             <constraint firstItem="CNA-Gl-W7R" firstAttribute="top" secondItem="frL-zb-Ozc" secondAttribute="bottom" constant="20" id="sFL-3e-7Y6"/>
                             <constraint firstItem="K93-bh-Lfm" firstAttribute="trailing" secondItem="Ny3-yp-ebO" secondAttribute="trailing" constant="20" id="uez-XG-xwG"/>
                         </constraints>
@@ -948,8 +948,8 @@
                     </view>
                     <connections>
                         <outlet property="noteTextField" destination="CNA-Gl-W7R" id="nkH-Oo-3eQ"/>
+                        <outlet property="saveBottomContstraint" destination="hrm-35-wmt" id="Y1f-Sm-nJL"/>
                         <outlet property="saveButton" destination="Ny3-yp-ebO" id="kdY-HG-MTe"/>
-                        <outlet property="textfieldHeight" destination="i4k-6Y-oWG" id="80y-R9-iOc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mrE-3U-kUk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
